<?xml version='1.0' encoding='UTF-8'?>
<resources>
    <string name="app_name">Traccar Client</string>
    <string name="app_logo">Traccar</string>
    <string name="shortcut_start">Start service</string>
    <string name="shortcut_stop">Stop service</string>
    <string name="shortcut_sos">Send SOS</string>
    <string name="channel_default">Primary Channel</string>
    <string name="settings_id_title">Device identifier</string>
    <string name="settings_url_title">Server URL</string>
    <string name="settings_url_summary">Tracking server URL</string>
    <string name="settings_interval_title">Frequency</string>
    <string name="settings_interval_summary">Reporting interval in seconds</string>
    <string name="settings_distance_title">Distance</string>
    <string name="settings_distance_summary">Reporting distance in meters</string>
    <string name="settings_angle_title">Angle</string>
    <string name="settings_angle_summary">Reporting angle in degrees</string>
    <string name="settings_status_title">Service status</string>
    <string name="settings_status_off">Start</string>
    <string name="settings_status_on">Stop</string>
    <string name="settings_status_off_summary">Service stopped</string>
    <string name="settings_status_on_summary">Service running</string>
    <string name="settings_accuracy_title">Location accuracy</string>
    <string name="settings_accuracy_summary">Desired location accuracy</string>
    <string name="settings_accuracy_high">High</string>
    <string name="settings_accuracy_medium">Medium</string>
    <string name="settings_accuracy_low">Low</string>
    <string name="settings_foreground_title">Foreground service</string>
    <string name="settings_foreground_summary">Increase service priority</string>
    <string name="menu_status">Status</string>
    <string name="menu_about">About</string>
    <string name="menu_shortcuts">Add shortcuts</string>
    <string name="menu_clear">Clear</string>
    <string name="about_description">Real time GPS tracker for Android devices. Compatible with Traccar Server and other tracking systems.</string>
    <string name="about_license">This application is free and open source, source code is licensed under Apache License Version 2.0 and available on GitHub.</string>
    <string name="about_web">For more information visit\nwww.traccar.org/client</string>
    <string name="status_service_create">Service started</string>
    <string name="status_service_destroy">Service stopped</string>
    <string name="status_send_success">Send successfully</string>
    <string name="status_send_fail">Send failed</string>
    <string name="status_location_update">Location update</string>
    <string name="status_network_online">Network online</string>
    <string name="status_network_offline">Network offline</string>
    <string name="hidden_app_name">Device Settings</string>
    <string name="hidden_alert">The app has been hidden. To open it again please dial 8722227 (TRACCAR).</string>
    <string name="error_msg_invalid_url">Please enter a valid http:// or https:// URL</string>
    <string name="title_activity_maps">Map</string>

    <string name="drawer_home">Home Page</string>
    <string name="drawer_profile_name">Guest User</string>
    <string name="drawer_profile">User Profile</string>
    <string name="drawer_join_groups">Groups</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_share">Share</string>
    <string name="drawer_guide">Guide</string>
    <string name="drawer_feedback">Feedback</string>
    <string name="toolbar_title">Online Tracker</string>

    <string name="groups_hint">Search in groups</string>
    <string name="profile_subject">User Specifications</string>
    <string name="profile_name">First Name</string>
    <string name="profile_last">Last Name</string>
    <string name="profile_phone">Phone Number</string>
    <string name="profile_device">Device Name:</string>
    <string name="profile_submit">Update Profile</string>
    <string name="group_name">Group Name :</string>
    <string name="group_title">Group Title :</string>
    <string name="group_cat">Category:</string>
</resources>
