<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >


    <EditTextPreference
        android:key="id"
        android:title="@string/settings_id_title"
        android:enabled="false"
        />

    <EditTextPreference
        android:defaultValue="@string/settings_url_default_value"
        android:key="url"
        android:enabled="false"
        android:summary="@string/settings_url_default_value"
        android:title="@string/settings_url_title" />

    <ListPreference
        android:defaultValue="medium"
        android:entries="@array/settings_accuracy_names"
        android:entryValues="@array/settings_accuracy_values"
        android:key="accuracy"
        android:summary="@string/settings_accuracy_summary"
        android:title="@string/settings_accuracy_title" />

    <EditTextPreference
        android:defaultValue="300"
        android:key="interval"
        android:numeric="integer"
        android:summary="@string/settings_interval_summary"
        android:title="@string/settings_interval_title" />

</PreferenceScreen>
