<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="320dp"
    android:layout_gravity="start"
    android:background="#EFEFEF"
    android:layout_height="match_parent"
    android:focusable="true"
    android:clickable="true"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/primary"
        android:layout_height="150dp"
        android:focusable="true"
        android:clickable="true"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="35dp"
            android:layout_marginStart="35dp"
            android:id="@+id/drawer_profile_img"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_user"
            app:civ_border_color="#FFF"
            app:civ_border_width="2dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/drawer_profile_img"
            android:layout_toRightOf="@+id/drawer_profile_img"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:textColor="#FFF"
            android:text="@string/drawer_profile_name"
            android:id="@+id/drawer_profile_name"
            android:layout_centerVertical="true"
            />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:padding="5dp"
        android:gravity="left|center_vertical"
        android:text="@string/drawer_home"
        android:drawableStart="@drawable/ic_home_icon_silhouette"
        android:drawableLeft="@drawable/ic_home_icon_silhouette"
        android:drawablePadding="15dp"
        android:id="@+id/drawer_home"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:onClick="onClick"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:padding="5dp"
        android:gravity="left|center_vertical"
        android:text="@string/drawer_profile"
        android:drawableLeft="@drawable/ic_man_user"
        android:drawableStart="@drawable/ic_man_user"
        android:drawablePadding="15dp"
        android:id="@+id/drawer_profile"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:onClick="onClick"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:padding="5dp"
        android:gravity="left|center_vertical"
        android:text="@string/drawer_join_groups"
        android:drawableLeft="@drawable/ic_link_symbol"
        android:drawableStart="@drawable/ic_link_symbol"
        android:drawablePadding="15dp"
        android:id="@+id/drawer_groups"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:onClick="onClick"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:padding="5dp"
        android:gravity="left|center_vertical"
        android:text="@string/drawer_settings"
        android:drawableLeft="@drawable/ic_settings_gears"
        android:drawableStart="@drawable/ic_settings_gears"
        android:drawablePadding="15dp"
        android:id="@+id/drawer_settings"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:onClick="onClick"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:padding="5dp"
        android:gravity="left|center_vertical"
        android:text="@string/drawer_share"
        android:drawableLeft="@drawable/ic_share_connection_sing"
        android:drawableStart="@drawable/ic_share_connection_sing"
        android:drawablePadding="15dp"
        android:id="@+id/drawer_share"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:padding="5dp"
        android:gravity="left|center_vertical"
        android:text="@string/drawer_guide"
        android:drawableLeft="@drawable/ic_help_operator"
        android:drawableStart="@drawable/ic_help_operator"
        android:drawablePadding="15dp"
        android:id="@+id/drawer_help"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:padding="5dp"
        android:gravity="left|center_vertical"
        android:text="@string/drawer_feedback"
        android:drawableLeft="@drawable/ic_feedback"
        android:drawableStart="@drawable/ic_feedback"
        android:drawablePadding="15dp"
        android:id="@+id/drawer_feedback"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        />

</LinearLayout>